Refactor Jenkins pipeline for Cloudera ETL process